spec/e2e/string/interpolation_limit.lit
println("{"{ "{"{"{"{"{"{"{1}"}"}"}"}"}"}"}"}") # error: [line 1] Error: Interpolation may only nest 8 levels deep.
